--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/google-genai": "^1.0.0-beta.4",
-    "@genkit-ai/next": "^1.0.0-beta.4",
+    "@genkit-ai/google-genai": "^1.0.0",
+    "@genkit-ai/next": "^1.0.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -45,7 +45,7 @@
     "embla-carousel-react": "^8.1.6",
     "firebase": "^11.9.1",
     "framer-motion": "^11.3.19",
-    "genkit": "^1.0.0-beta.4",
+    "genkit": "^1.0.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.417.0",
     "next": "14.2.5",
@@ -63,7 +63,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "genkit-cli": "^1.0.0-beta.4",
+    "genkit-cli": "^1.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
