--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/google-genai": "^1.20.0",
+    "@genkit-ai/google-genai": "1.20.0",
     "@genkit-ai/next": "1.20.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -44,13 +44,13 @@
     "embla-carousel-react": "^8.1.6",
     "firebase": "^11.9.1",
     "framer-motion": "^11.3.19",
-    "genkit": "1.0.0",
+    "genkit": "1.20.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.417.0",
     "next": "15.0.7",
     "patch-package": "^8.0.0",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.68.0",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
@@ -62,7 +62,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "genkit-cli": "^1.20.0",
+    "genkit-cli": "1.20.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
